# sve4

./: .clang-format  .clang-tidy  .clang-tidy-test  .cmakelintrc  .gersemirc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  GEMINI.md  README.md  about.html  about_8dox.html  annotated.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_ef3b2545113449f8f25e623a543d64e3.html  files.html  index.html  modules.html  namespaces.html  pages.html  searchdata-v2.js
.github/workflows/: ci.yml
assets/: 4x4.xcf  Makefile  alice.dos.txt  alice.unix.txt
cmake/: FindFFmpeg.cmake  coverage.cmake  dev-mode.cmake  docs-ci.cmake  docs.cmake  ffmpeg.cmake
docs/: conf.py.in
libsve4_decode/: CMakeLists.txt  decoder.c  decoder.h  error.c  error.h  ffmpeg.c  ffmpeg.h  ffmpeg_decoder.c  ffmpeg_decoder.h  ffmpeg_demuxer.c  ffmpeg_demuxer.h  ffmpeg_demuxer_thread.c  ffmpeg_demuxer_thread.h  ffmpeg_packet_queue.c  ffmpeg_packet_queue.h  frame.c  frame.h  libwebp.c  libwebp.h  ram_frame.c  ram_frame.h  read.c  read.h
libsve4_decode/tests/: CMakeLists.txt  ffmpeg_packet_queue.c  generic.c  http.h  read.c  webp.c
libsve4_log/: CMakeLists.txt  ansi.h  api.c  api.h  error.c  error.h  ffmpeg.c  ffmpeg.h  glfw.c  glfw.h  init.c  init.h  init_test.c  init_test.h  tty.c  tty.h  vulkan.c  vulkan.h
libsve4_log/fuzz/: CMakeLists.txt  shorten_path.c
libsve4_log/tests/: .clang-tidy  CMakeLists.txt  basic.c  common.h  counter.h  custom.c  error.c  ffmpeg.c  glfw.c  tty.c  vulkan.c  vulkan_macos.c
libsve4_utils/: CMakeLists.txt  allocator.c  allocator.h  arena.c  arena.h  buffer.c  buffer.h  defines.h  error.h  formats.c  formats.h  volk.h
libsve4_utils/tests/: CMakeLists.txt  allocator.c  arena.c  buffer.c  formats.c  vulkan_dll.c
